[gd_scene load_steps=28 format=3 uid="uid://clarv4n7o8im6"]

[ext_resource type="Script" path="res://2d/actors/player/Player.gd" id="1_6xj4k"]
[ext_resource type="Texture2D" uid="uid://dywnh5n27evba" path="res://assets/art/Objects & Players/Player/Player Run 1 - Idle.png" id="2_dtcjh"]
[ext_resource type="Texture2D" uid="uid://u4moqrik3ldb" path="res://assets/art/Objects & Players/Player/Player Fall.png" id="2_l33j5"]
[ext_resource type="Texture2D" uid="uid://cqyrhy4o7e4x0" path="res://assets/art/Objects & Players/Player/Player Land Squish.png" id="3_88we4"]
[ext_resource type="Texture2D" uid="uid://c06eqajt4btmh" path="res://assets/art/Objects & Players/Player/Player Run 2.png" id="4_my4rd"]
[ext_resource type="Texture2D" uid="uid://cyywyhd8uyi4x" path="res://assets/art/Objects & Players/Player/Player Jump.png" id="5_28a1n"]
[ext_resource type="Texture2D" uid="uid://spb84sq6smwf" path="res://assets/art/Objects & Players/Player/Player Run 3.png" id="5_rwbcy"]
[ext_resource type="Texture2D" uid="uid://dxbs0a0iw778s" path="res://assets/art/Objects & Players/Player/Player Run 4.png" id="6_4vhas"]
[ext_resource type="AudioStream" uid="uid://ce2dcppxrvjec" path="res://assets/sound/walk.wav" id="10_awyxx"]
[ext_resource type="PackedScene" uid="uid://dcnv7c42q4elk" path="res://components/ui/health_bar/health_bar.tscn" id="11_38iii"]
[ext_resource type="AudioStream" uid="uid://cjwyuvt5l6tlw" path="res://assets/sound/actor2_hurt1.wav" id="12_n8eay"]
[ext_resource type="AudioStream" uid="uid://bg0yqkfriyxg1" path="res://assets/sound/jump.wav" id="12_pwox8"]
[ext_resource type="AudioStream" uid="uid://ddilkfbg162rl" path="res://assets/sound/actor1_hurt1.wav" id="13_0x0u5"]
[ext_resource type="AudioStream" uid="uid://pt602n5g3l0u" path="res://assets/sound/actor2_hurt2.wav" id="13_n1832"]
[ext_resource type="AudioStream" uid="uid://sgby472epubq" path="res://assets/sound/sword_pickup.wav" id="14_md2au"]
[ext_resource type="AudioStream" uid="uid://o6mbs8mao0tp" path="res://assets/sound/actor1_hurt2.wav" id="15_e37r8"]
[ext_resource type="AudioStream" uid="uid://dbdh64a1qi51a" path="res://assets/sound/actor1_die.wav" id="16_nlcyj"]
[ext_resource type="AudioStream" uid="uid://d0g4b6006l24m" path="res://assets/sound/actor2_die.wav" id="17_qcolf"]
[ext_resource type="AudioStream" uid="uid://yhgjx1cm242a" path="res://assets/sound/sfx_pickup.wav" id="20_iidyc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b3lbb"]
radius = 7.0
height = 29.0

[sub_resource type="SpriteFrames" id="SpriteFrames_kgixu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l33j5")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_88we4")
}, {
"duration": 1.0,
"texture": ExtResource("2_dtcjh")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dtcjh")
}, {
"duration": 1.0,
"texture": ExtResource("3_88we4")
}],
"loop": true,
"name": &"idle_weapon",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_28a1n")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_my4rd")
}, {
"duration": 1.0,
"texture": ExtResource("2_dtcjh")
}, {
"duration": 1.0,
"texture": ExtResource("6_4vhas")
}, {
"duration": 1.0,
"texture": ExtResource("5_rwbcy")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_my4rd")
}, {
"duration": 1.0,
"texture": ExtResource("2_dtcjh")
}, {
"duration": 1.0,
"texture": ExtResource("6_4vhas")
}, {
"duration": 1.0,
"texture": ExtResource("5_rwbcy")
}],
"loop": true,
"name": &"move_weapon",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_tqekc"]
offsets = PackedFloat32Array(0, 0.675325)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_15uqp"]
gradient = SubResource("Gradient_tqekc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rcn21"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("10_awyxx")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7cbmr"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("12_pwox8")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_82laq"]
random_pitch = 1.5
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("12_n8eay")
stream_1/stream = ExtResource("13_0x0u5")
stream_2/stream = ExtResource("13_n1832")
stream_3/stream = ExtResource("15_e37r8")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cepyg"]
random_volume_offset_db = 1.0
streams_count = 2
stream_0/stream = ExtResource("16_nlcyj")
stream_1/stream = ExtResource("17_qcolf")

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_6xj4k")

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("CapsuleShape2D_b3lbb")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6.25849e-07)
sprite_frames = SubResource("SpriteFrames_kgixu")
animation = &"jump"

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(7.62939e-06, -7.99999)
scale = Vector2(3.75, 3.75)
color = Color(1, 0.94902, 0.458824, 1)
texture = SubResource("GradientTexture2D_15uqp")

[node name="HealthBar" parent="." instance=ExtResource("11_38iii")]
position = Vector2(0, -56)

[node name="WalkingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rcn21")
volume_db = -10.0

[node name="JumpingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7cbmr")
volume_db = -10.0

[node name="HurtingAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -56)
stream = SubResource("AudioStreamRandomizer_82laq")
volume_db = -12.0

[node name="DieAudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -56)
stream = SubResource("AudioStreamRandomizer_cepyg")

[node name="PickUpWeaponAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_md2au")

[node name="PickUpPowerUpAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_iidyc")

[connection signal="finished" from="DieAudioStreamPlayer2D2" to="." method="_on_die_audio_stream_player_2d_2_finished"]
